objects/maps__AdvRouteVisitWindows__c.object
<CustomObject>
    <description>These are the different Advanced Route visit windows for a record</description>
    <fields>
        <fullName>maps__AlternateVisitWindowsMap__c</fullName>
        <description>This is a JSON map for the non default visit windows</description>
        <label>Alternate Visit Windows Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__DaysOfWeek__c</fullName>
        <description>These are the days of the week that this window is valid</description>
        <label>Day(s) of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will determine if the saved record is a default</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndDate__c</fullName>
        <description>The end date that this window is valid for</description>
        <inlineHelpText>(optional) If the Start Date is populated, then the End Date is required</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__FridayEnd1__c</fullName>
        <label>Friday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__FridayEnd2__c</fullName>
        <label>Friday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__FridayStart1__c</fullName>
        <label>Friday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__FridayStart2__c</fullName>
        <label>Friday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__IsTemporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MondayEnd1__c</fullName>
        <label>Monday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__MondayEnd2__c</fullName>
        <label>Monday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__MondayStart1__c</fullName>
        <label>Monday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__MondayStart2__c</fullName>
        <label>Monday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__RepeatsAs__c</fullName>
        <description>This is the frequency at which the visit will repeat</description>
        <label>Repeats As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Times Through Month</fullName>
                </value>
                <value>
                    <fullName>Single Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SaturdayEnd1__c</fullName>
        <label>Saturday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SaturdayEnd2__c</fullName>
        <label>Saturday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SaturdayStart1__c</fullName>
        <label>Saturday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SaturdayStart2__c</fullName>
        <label>Saturday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will determine if the visit window is allowed to be shared between records or is related to a specific record</description>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__StartDate__c</fullName>
        <description>The start date that this window is valid for</description>
        <inlineHelpText>(optional)</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__SundayEnd1__c</fullName>
        <label>Sunday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SundayEnd2__c</fullName>
        <label>Sunday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SundayStart1__c</fullName>
        <label>Sunday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__SundayStart2__c</fullName>
        <label>Sunday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayEnd1__c</fullName>
        <label>Thursday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayEnd2__c</fullName>
        <label>Thursday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayStart1__c</fullName>
        <label>Thursday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__ThursdayStart2__c</fullName>
        <label>Thursday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TimeWindowEnd1__c</fullName>
        <description>end time of first time window option</description>
        <label>Time Window End 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TimeWindowEnd2__c</fullName>
        <description>end time of second time window option</description>
        <inlineHelpText>(optional) Time Window 2 cannot overlap Time Window 1</inlineHelpText>
        <label>Time Window End 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TimeWindowStart1__c</fullName>
        <description>start time of first time window option</description>
        <label>Time Window Start 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TimeWindowStart2__c</fullName>
        <description>start time of second time window option</description>
        <inlineHelpText>(optional) Time Window 2 cannot overlap Time Window 1</inlineHelpText>
        <label>Time Window Start 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TimesThroughMonth__c</fullName>
        <label>Times Through Month</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Time Through</fullName>
                </value>
                <value>
                    <fullName>2nd Time Through</fullName>
                </value>
                <value>
                    <fullName>3rd Time Through</fullName>
                </value>
                <value>
                    <fullName>4th Time Through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TuesdayEnd1__c</fullName>
        <label>Tuesday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TuesdayEnd2__c</fullName>
        <label>Tuesday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TuesdayStart1__c</fullName>
        <label>Tuesday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__TuesdayStart2__c</fullName>
        <label>Tuesday Start 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <description>This is the window type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Non-Working Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__VW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AdvRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VW_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>AdvRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VW_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AdvRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VW_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>AdvRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AdvRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VisitType__c</fullName>
        <description>This is for determining which visit windows should be used based on visit type</description>
        <label>Visit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__VisitWindowStrictness__c</fullName>
        <label>Visit Window Strictness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strict</fullName>
                </value>
                <value>
                    <fullName>Fluid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__VisitWindow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Window</label>
        <referenceTo>maps__AdvRouteVisitWindows__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Visit Windows</relationshipLabel>
        <relationshipName>MapsAdvancedRouteVisitWindows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayEnd1__c</fullName>
        <label>Wednesday End 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayEnd2__c</fullName>
        <label>Wednesday End 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayStart1__c</fullName>
        <label>Wednesday Start 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__WednesdayStart2__c</fullName>
        <label>Wednesday Start 2</label>
        <type>Time</type>
    </fields>
    <label>Maps Advanced Route Visit Windows</label>
    <nameField>
        <label>Maps Advanced Route Visit Windows Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Visit Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>